--- a/addons/account/views/report_invoice.xml
+++ b/addons/account/views/report_invoice.xml
@@ -172,8 +172,6 @@
                                 <t t-set="treated_lines" t-value="[]"/>
 
                                 <t t-foreach="lines" t-as="line">
-                                    <t t-set="hide_details" t-value="line.collapse_composition"/>
-                                    <t t-set="hide_prices" t-value="line.collapse_prices"/>
 
                                     <t t-if="line.id not in treated_lines and (hide_details or hide_prices)">
                                         <t t-if="hide_details" t-set="grouped_lines" t-value="line.get_lines_grouped_by_section()"/>
@@ -181,9 +179,13 @@
                                         <t t-set="current_subsection" t-value="0"/>
                                         <t t-if="line.display_type == 'line_section'">
                                             <t t-set="current_section" t-value="0"/>
+                                            <t t-set="hide_details" t-value="line.collapse_composition"/>
+                                            <t t-set="hide_prices" t-value="line.collapse_prices"/>
                                         </t>
                                         <t t-elif="line.display_type == 'line_subsection'">
                                             <t t-set="current_section" t-value="line"/>
+                                            <t t-set="hide_details" t-value="hide_details or line.collapse_composition"/>
+                                            <t t-set="hide_prices" t-value="hide_prices or line.collapse_prices"/>
                                         </t>
                                         <t t-foreach="grouped_lines" t-as="grouped_line">
                                             <t t-if="grouped_line['display_type'] == 'line_section'">
@@ -263,7 +265,7 @@
                                                 </span>
                                             </td>
                                             <td name="td_price_unit" t-attf-class="text-end {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
-                                                <span t-if="not line.collapse_prices" class="text-nowrap" t-field="line.price_unit">9.00</span>
+                                                <span t-if="not line.parent_id.collapse_prices" class="text-nowrap" t-field="line.price_unit">9.00</span>
                                             </td>
                                             <td name="td_discount" t-if="display_discount" t-attf-class="text-end {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}">
                                                 <span class="text-nowrap" t-field="line.discount">0</span>
@@ -273,8 +275,8 @@
                                                 <span t-if="not line.collapse_prices" t-out="taxes" id="line_tax_ids">Tax 15%</span>
                                             </td>
                                             <td name="td_subtotal" class="text-end o_price_total">
-                                                <span t-if="not line.collapse_prices and o.company_price_include == 'tax_excluded'" class="text-nowrap" t-field="line.price_subtotal">27.00</span>
-                                                <span t-if="not line.collapse_prices and o.company_price_include == 'tax_included'" class="text-nowrap" t-field="line.price_total">31.05</span>
+                                                <span t-if="not line.parent_id.collapse_prices and o.company_price_include == 'tax_excluded'" class="text-nowrap" t-field="line.price_subtotal">27.00</span>
+                                                <span t-if="not line.parent_id.collapse_prices and o.company_price_include == 'tax_included'" class="text-nowrap" t-field="line.price_total">31.05</span>
                                             </td>
                                         </t>
                                         <t t-elif="line.display_type in ('line_section', 'line_subsection')">
