--- a/addons/sale/views/sale_order_views.xml
+++ b/addons/sale/views/sale_order_views.xml
@@ -500,6 +500,7 @@
                             mode="list,kanban"
                             readonly="state == 'cancel' or locked"
                             aggregated_fields="price_subtotal,price_total"
+                            options="{'hide_composition': True, 'hide_prices': True, 'subsections': True}"
                         >
                             <form>
                                 <field name="technical_price_unit" invisible="1"/>
