--- a/addons/marketing_card/views/card_campaign_views.xml
+++ b/addons/marketing_card/views/card_campaign_views.xml
@@ -71,6 +71,7 @@
                 <group>
                     <group>
                         <field name="preview_record_ref" string="Recipients" placeholder="Preview on..." options="{'no_create': True}"/>
+                        <field name="target_url_dyn" widget="boolean_toggle" invisible="not show_target_url_dyn"/>
                         <field name="target_url" placeholder="Your Home Page"/>
                         <field name="res_model" invisible="1"/><!--Get the default model for field pickers-->
                         <field name="res_model" groups="base.group_no_one"/>
