--- a/addons/hr/views/res_users.xml
+++ b/addons/hr/views/res_users.xml
@@ -122,6 +122,23 @@
                                     <!-- overridden in other modules -->
                                 </group>
                             </div>
+                            <div id="o_employee_org_chart" class="col-lg-5">
+                                <div invisible="not employee_id.subordinate_ids and (not employee_parent_id or employee_parent_id == id)" class="o_horizontal_separator mt-4 mb-3 text-uppercase fw-bolder small">
+                                    Organization Chart
+                                    <a name="%(hr.action_hr_employee_org_chart)d"
+                                        type="action"
+                                        role="button"
+                                        class="float-end me-2 cursor-pointer"
+                                        context="{'hierarchy_res_id': id}">
+                                            <i class="fa fa-share-alt fa-rotate-90 ms-1 mt-1" role="img" aria-label="Full Chart"/>
+                                            Full Chart
+                                    </a>
+                                </div>
+                                <div invisible="employee_id.subordinate_ids or (employee_parent_id and not employee_parent_id == id)" class="o_horizontal_separator mt-4 mb-3 text-uppercase fw-bolder small">
+                                    Organization Chart
+                                </div>
+                                <field name="child_ids" class="position-relative w-100" widget="hr_org_chart" readonly="1" nolabel="1"/>
+                            </div>
                         </div>
                     </page>
                     <page name="personal_information" string="Private Information">
