--- a/addons/mail/wizard/mail_activity_schedule_views.xml
+++ b/addons/mail/wizard/mail_activity_schedule_views.xml
@@ -50,7 +50,7 @@
                             </group>
                             <group>
                                 <field name="res_model" widget="activity_model_selector" string="Link to"
-                                    invisible="id or context.get('active_model')"/>
+                                    invisible="id or context.get('active_model')" required="activity_user_id != context.get('uid')"/>
                                 <field name="date_deadline" string="Due Date"/>
                                 <field name="activity_user_id" widget="many2one_avatar_user" placeholder="Unassigned"/>
                             </group>
