--- a/addons/account/views/res_config_settings_views.xml
+++ b/addons/account/views/res_config_settings_views.xml
@@ -233,9 +233,8 @@
                                 documentation="/applications/finance/accounting/payables/pay/check.html">
                                 <field name="module_account_check_printing"/>
                             </setting>
-                            <setting id="sepa_payments" title="If you check this box, you will be able to register your payment using SEPA." company_dependent="1" help="Pay your bills in one-click using Euro SEPA Service"
-                                documentation="/applications/finance/accounting/payables/pay/sepa.html"
-                                invisible="'SEPA' not in company_country_group_codes">
+                            <setting id="sepa_payments" title="If you check this box, you will be able to register your payment using SEPA / ISO20022." company_dependent="1" help="Pay your bills in one-click using Euro SEPA Service / ISO20022"
+                                documentation="/applications/finance/accounting/payables/pay/sepa.html">
                                 <field name="module_account_iso20022" widget="upgrade_boolean"/>
                             </setting>
                         </block>
