[FIX] website_event_sale: convert ticket prices into website currency
In multi-company, tickets from different companies can be added to a single
event, even if that event belongs to one company only.

When doing so, checking the ticket prices on the website will show unconverted
prices, displaying the prices of tickets at face value, i.e. without any
conversion. A ticket with its price being 100€ will be displayed as 100$.

Steps to reproduce the issue:
- Have 2 companies, one in dollar, one in euro
- Create an 'event' product in each company, with 100 as unit price
- Create an event, add the two tickets (related to the products created above)
- Now, on the event on the website, click on "Register".
- See the prices of both tickets, both are shown as 100, while one of the
  ticket should've been converted from one currency to the website currency.

opw-4720354

--- a/addons/website_event_sale/views/website_event_templates.xml
+++ b/addons/website_event_sale/views/website_event_templates.xml
@@ -19,20 +19,20 @@
                 <del t-if="website.show_line_subtotals_tax_selection == 'tax_excluded'"
                      class="text-danger me-1"
                      t-field="ticket.price"
-                     t-options="{'widget': 'monetary', 'from_currency': event.company_id.sudo().currency_id, 'display_currency': website.currency_id}"/>
+                     t-options="{'widget': 'monetary', 'from_currency': ticket.currency_id, 'display_currency': website.currency_id}"/>
                 <del t-else=""
                      class="text-danger me-1"
                      t-field="ticket.price_incl"
-                     t-options="{'widget': 'monetary', 'from_currency': event.company_id.sudo().currency_id, 'display_currency': website.currency_id}"/>
+                     t-options="{'widget': 'monetary', 'from_currency': ticket.currency_id, 'display_currency': website.currency_id}"/>
             </t>
             <span t-if="website.show_line_subtotals_tax_selection == 'tax_excluded'"
                   class="fs-6"
                   t-field="ticket.price_reduce"
-                  t-options="{'widget': 'monetary', 'from_currency': event.company_id.sudo().currency_id, 'display_currency': website.currency_id}"/>
+                  t-options="{'widget': 'monetary', 'from_currency': ticket.currency_id, 'display_currency': website.currency_id}"/>
             <span t-else=""
                   t-field="ticket.price_reduce_taxinc"
                   class="fs-6"
-                  t-options="{'widget': 'monetary', 'from_currency': event.company_id.sudo().currency_id, 'display_currency': website.currency_id}"/>
+                  t-options="{'widget': 'monetary', 'from_currency': ticket.currency_id, 'display_currency': website.currency_id}"/>
             <span itemprop="price" class="d-none" t-out="ticket.price"/>
             <span itemprop="priceCurrency" class="d-none" t-out="website.currency_id.name"/>
         </t>
@@ -46,10 +46,10 @@
         <t t-if="highest_price > 0">
             <small class="text-muted">
                 From
-                <span t-out="lowest_price" t-options="{'widget': 'monetary', 'from_currency': event.company_id.sudo().currency_id, 'display_currency': website.currency_id}"/>
+                <span t-out="lowest_price" t-options="{'widget': 'monetary', 'from_currency': ticket.currency_id, 'display_currency': website.currency_id}"/>
                 <t t-if="lowest_price != highest_price">
                     to
-                    <span t-out="highest_price" t-options="{'widget': 'monetary', 'from_currency': event.company_id.sudo().currency_id, 'display_currency': website.currency_id}"/>
+                    <span t-out="highest_price" t-options="{'widget': 'monetary', 'from_currency': ticket.currency_id, 'display_currency': website.currency_id}"/>
                 </t>
             </small>
         </t>
@@ -62,20 +62,20 @@
                     <del t-if="website.show_line_subtotals_tax_selection == 'tax_excluded'"
                          class="text-danger me-1"
                          t-field="tickets.price"
-                         t-options="{'widget': 'monetary', 'from_currency': event.company_id.sudo().currency_id, 'display_currency': website.currency_id}"/>
+                         t-options="{'widget': 'monetary', 'from_currency': tickets.currency_id, 'display_currency': website.currency_id}"/>
                     <del t-else=""
                          class="text-danger me-1"
                          t-field="tickets.price_incl"
-                         t-options="{'widget': 'monetary', 'from_currency': event.company_id.sudo().currency_id, 'display_currency': website.currency_id}"/>
+                         t-options="{'widget': 'monetary', 'from_currency': tickets.currency_id, 'display_currency': website.currency_id}"/>
                 </t>
                 <span t-if="website.show_line_subtotals_tax_selection == 'tax_excluded'"
                       class="badge text-bg-secondary fs-6"
                       t-field="tickets.price_reduce"
-                      t-options="{'widget': 'monetary', 'from_currency': event.company_id.sudo().currency_id, 'display_currency': website.currency_id}"/>
+                      t-options="{'widget': 'monetary', 'from_currency': tickets.currency_id, 'display_currency': website.currency_id}"/>
                 <span t-else=""
                       class="badge text-bg-secondary fs-6"
                       t-field="tickets.price_reduce_taxinc"
-                      t-options="{'widget': 'monetary', 'from_currency': event.company_id.sudo().currency_id, 'display_currency': website.currency_id}"/>
+                      t-options="{'widget': 'monetary', 'from_currency': tickets.currency_id, 'display_currency': website.currency_id}"/>
                 <span itemprop="price" class="d-none" t-out="tickets.price"/>
                 <span itemprop="priceCurrency" class="d-none" t-out="website.currency_id.name"/>
             </t>
