[IMP] hr_attendance: add Device & Location Tracking setting
Some countries have strict data protection laws regarding location capture,
so companies need the ability to disable GPS coordinates collection during
employee check-in/check-out.

When Device & Location Tracking is disabled:
- No GPS coordinates, IP addresses, or browser details are collected
- Related fields are hidden from form  view
- Geolocation API calls are skipped in frontend
- Attendance functionality remains fully operational

Task-5044938

closes odoo/odoo#224570

Signed-off-by: Yannick Tivisse (yti) <yti@odoo.com>

--- a/addons/hr_attendance/views/hr_attendance_view.xml
+++ b/addons/hr_attendance/views/hr_attendance_view.xml
@@ -145,11 +145,11 @@
                             <group>
                                 <group>
                                     <field name="in_mode"/>
-                                    <field name="in_ip_address" invisible="in_mode == 'manual'"/>
-                                    <field name="in_browser" invisible="in_mode == 'manual'"/>
+                                    <field name="in_ip_address" invisible="in_mode == 'manual' or not device_tracking_enabled"/>
+                                    <field name="in_browser" invisible="in_mode == 'manual' or not device_tracking_enabled"/>
                                 </group>
                             </group>
-                            <group invisible="in_mode == 'manual'">
+                            <group invisible="in_mode == 'manual' or not device_tracking_enabled">
                                 <field name="in_location"/>
                                 <label for="in_latitude" string="GPS Coordinates"/>
                                 <div>
@@ -176,11 +176,11 @@
                             <group>
                                 <group>
                                     <field name="out_mode" string="Mode"/>
-                                    <field name="out_ip_address" string="IP Address" invisible="in_mode == 'manual'"/>
-                                    <field name="out_browser" string="Browser" invisible="in_mode == 'manual'"/>
+                                    <field name="out_ip_address" string="IP Address" invisible="in_mode == 'manual' or not device_tracking_enabled"/>
+                                    <field name="out_browser" string="Browser" invisible="in_mode == 'manual' or not device_tracking_enabled"/>
                                 </group>
                             </group>
-                            <group invisible="out_mode == 'manual'">
+                            <group invisible="out_mode == 'manual' or not device_tracking_enabled">
                                 <field name="out_location"/>
                                 <label for="out_latitude" string="GPS Coordinates"/>
                                 <div>
